k8s/app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: check-rabbitmq
  namespace: infrastructure
  labels:
    app: check-rabbitmq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: check-rabbitmq
  template:
    metadata:
      labels:
        app: check-rabbitmq
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - check-rabbitmq
              topologyKey: "kubernetes.io/hostname"
      containers:
      - image: devo-repo/devo:latest
        name: check-rabbitmq
        ports:
        - containerPort: 5000
        resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"

---
kind: Service
apiVersion: v1
metadata:
  name: check-rabbitmq
  namespace: infrastructure
  labels:
    app: check-rabbitmq
spec:
  type: ClusterIP
  selector:
    app: check-rabbitmq
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: api

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: check-rabbitmq
  namespace: infrastructure
  labels:
    app: check-rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - check-rabbitmq.devo.com
      secretName: check-rabbitmq-tls
  rules:
    - host: check-rabbitmq.devo.team
      http:
        paths:
          - backend:
              serviceName: check-rabbitmq
              servicePort: 5000
